--- a/room.html
+++ b/room.html
@@ -47,6 +47,7 @@
                         <div>
                             <img src="" alt="">
                             Esta pergunta é anônima
+                            <!-- dança gatinho dança -->
                         </div>
                         <button>Enviar</button>    
                     </fotter>
